litehtml-sys/csrc/litehtml_c.h

/* --------------------------------------------------------------------------
 * Simple C structs (value types, passed across FFI by value or pointer)
 * -------------------------------------------------------------------------- */

typedef struct lh_position {
    float x;
    float y;
    float width;
    float height;
} lh_position_t;
typedef struct lh_size {
    float width;
    float height;
} lh_size_t;
typedef struct lh_web_color {
    unsigned char red;
    unsigned char green;
    unsigned char blue;
    unsigned char alpha;
    int is_current_color;
} lh_web_color_t;
typedef struct lh_font_metrics {
    float font_size;
    float height;
    float ascent;
    float descent;
    float x_height;
    float ch_width;
    int   draw_spaces;
    float sub_shift;
    float super_shift;
} lh_font_metrics_t;
typedef struct lh_border_radiuses {
    float top_left_x;
    float top_left_y;
    float top_right_x;
    float top_right_y;
    float bottom_right_x;
    float bottom_right_y;
    float bottom_left_x;
    float bottom_left_y;
} lh_border_radiuses_t;
typedef struct lh_border {
    float          width;
    int            style;
    lh_web_color_t color;
} lh_border_t;
typedef struct lh_borders {
    lh_border_t         left;
    lh_border_t         top;
    lh_border_t         right;
    lh_border_t         bottom;
    lh_border_radiuses_t radius;
} lh_borders_t;
typedef struct lh_media_features {
    int   type;
    float width;
    float height;
    float device_width;
    float device_height;
    int   color;
    int   color_index;
    int   monochrome;
    float resolution;
} lh_media_features_t;
typedef struct lh_point {
    float x;
    float y;
} lh_point_t;
/* --------------------------------------------------------------------------
 * Opaque types (pointers to C++ objects, never dereferenced from C)
 * -------------------------------------------------------------------------- */

typedef struct lh_document           lh_document_t;
typedef struct lh_background_layer   lh_background_layer_t;
typedef struct lh_linear_gradient    lh_linear_gradient_t;
typedef struct lh_radial_gradient    lh_radial_gradient_t;
typedef struct lh_conic_gradient     lh_conic_gradient_t;
typedef struct lh_font_description   lh_font_description_t;
typedef struct lh_list_marker        lh_list_marker_t;
/* --------------------------------------------------------------------------
 * Accessor functions for opaque types
 * -------------------------------------------------------------------------- */

/* font_description getters */
const char* lh_font_description_family(const lh_font_description_t* fd);
float       lh_font_description_size(const lh_font_description_t* fd);
int         lh_font_description_style(const lh_font_description_t* fd);
int         lh_font_description_weight(const lh_font_description_t* fd);
int         lh_font_description_decoration_line(const lh_font_description_t* fd);
int   lh_font_description_decoration_thickness_is_predefined(const lh_font_description_t* fd);
int   lh_font_description_decoration_thickness_predef(const lh_font_description_t* fd);