litehtml-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_position {
    pub x: f32,
    pub y: f32,
    pub width: f32,
    pub height: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_position"][::std::mem::size_of::<lh_position>() - 16usize];
    ["Alignment of lh_position"][::std::mem::align_of::<lh_position>() - 4usize];
    ["Offset of field: lh_position::x"][::std::mem::offset_of!(lh_position, x) - 0usize];
    ["Offset of field: lh_position::y"][::std::mem::offset_of!(lh_position, y) - 4usize];
    ["Offset of field: lh_position::width"][::std::mem::offset_of!(lh_position, width) - 8usize];
    ["Offset of field: lh_position::height"][::std::mem::offset_of!(lh_position, height) - 12usize];
};
pub type lh_position_t = lh_position;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_size {
    pub width: f32,
    pub height: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_size"][::std::mem::size_of::<lh_size>() - 8usize];
    ["Alignment of lh_size"][::std::mem::align_of::<lh_size>() - 4usize];
    ["Offset of field: lh_size::width"][::std::mem::offset_of!(lh_size, width) - 0usize];
    ["Offset of field: lh_size::height"][::std::mem::offset_of!(lh_size, height) - 4usize];
};
pub type lh_size_t = lh_size;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_web_color {
    pub red: ::std::os::raw::c_uchar,
    pub green: ::std::os::raw::c_uchar,
    pub blue: ::std::os::raw::c_uchar,
    pub alpha: ::std::os::raw::c_uchar,
    pub is_current_color: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_web_color"][::std::mem::size_of::<lh_web_color>() - 8usize];
    ["Alignment of lh_web_color"][::std::mem::align_of::<lh_web_color>() - 4usize];
    ["Offset of field: lh_web_color::red"][::std::mem::offset_of!(lh_web_color, red) - 0usize];
    ["Offset of field: lh_web_color::green"][::std::mem::offset_of!(lh_web_color, green) - 1usize];
    ["Offset of field: lh_web_color::blue"][::std::mem::offset_of!(lh_web_color, blue) - 2usize];
    ["Offset of field: lh_web_color::alpha"][::std::mem::offset_of!(lh_web_color, alpha) - 3usize];
    ["Offset of field: lh_web_color::is_current_color"]
        [::std::mem::offset_of!(lh_web_color, is_current_color) - 4usize];
};
pub type lh_web_color_t = lh_web_color;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_font_metrics {
    pub font_size: f32,
    pub height: f32,
    pub ascent: f32,
    pub descent: f32,
    pub x_height: f32,
    pub ch_width: f32,
    pub draw_spaces: ::std::os::raw::c_int,
    pub sub_shift: f32,
    pub super_shift: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_font_metrics"][::std::mem::size_of::<lh_font_metrics>() - 36usize];
    ["Alignment of lh_font_metrics"][::std::mem::align_of::<lh_font_metrics>() - 4usize];
    ["Offset of field: lh_font_metrics::font_size"]
        [::std::mem::offset_of!(lh_font_metrics, font_size) - 0usize];
    ["Offset of field: lh_font_metrics::height"]
        [::std::mem::offset_of!(lh_font_metrics, height) - 4usize];
    ["Offset of field: lh_font_metrics::ascent"]
        [::std::mem::offset_of!(lh_font_metrics, ascent) - 8usize];
    ["Offset of field: lh_font_metrics::descent"]
        [::std::mem::offset_of!(lh_font_metrics, descent) - 12usize];
    ["Offset of field: lh_font_metrics::x_height"]
        [::std::mem::offset_of!(lh_font_metrics, x_height) - 16usize];
    ["Offset of field: lh_font_metrics::ch_width"]
        [::std::mem::offset_of!(lh_font_metrics, ch_width) - 20usize];
    ["Offset of field: lh_font_metrics::draw_spaces"]
        [::std::mem::offset_of!(lh_font_metrics, draw_spaces) - 24usize];
    ["Offset of field: lh_font_metrics::sub_shift"]
        [::std::mem::offset_of!(lh_font_metrics, sub_shift) - 28usize];
    ["Offset of field: lh_font_metrics::super_shift"]
        [::std::mem::offset_of!(lh_font_metrics, super_shift) - 32usize];
};
pub type lh_font_metrics_t = lh_font_metrics;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_border_radiuses {
    pub top_left_x: f32,
    pub top_left_y: f32,
    pub top_right_x: f32,
    pub top_right_y: f32,
    pub bottom_right_x: f32,
    pub bottom_right_y: f32,
    pub bottom_left_x: f32,
    pub bottom_left_y: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_border_radiuses"][::std::mem::size_of::<lh_border_radiuses>() - 32usize];
    ["Alignment of lh_border_radiuses"][::std::mem::align_of::<lh_border_radiuses>() - 4usize];
    ["Offset of field: lh_border_radiuses::top_left_x"]
        [::std::mem::offset_of!(lh_border_radiuses, top_left_x) - 0usize];
    ["Offset of field: lh_border_radiuses::top_left_y"]
        [::std::mem::offset_of!(lh_border_radiuses, top_left_y) - 4usize];
    ["Offset of field: lh_border_radiuses::top_right_x"]
        [::std::mem::offset_of!(lh_border_radiuses, top_right_x) - 8usize];
    ["Offset of field: lh_border_radiuses::top_right_y"]
        [::std::mem::offset_of!(lh_border_radiuses, top_right_y) - 12usize];
    ["Offset of field: lh_border_radiuses::bottom_right_x"]
        [::std::mem::offset_of!(lh_border_radiuses, bottom_right_x) - 16usize];
    ["Offset of field: lh_border_radiuses::bottom_right_y"]
        [::std::mem::offset_of!(lh_border_radiuses, bottom_right_y) - 20usize];
    ["Offset of field: lh_border_radiuses::bottom_left_x"]
        [::std::mem::offset_of!(lh_border_radiuses, bottom_left_x) - 24usize];
    ["Offset of field: lh_border_radiuses::bottom_left_y"]
        [::std::mem::offset_of!(lh_border_radiuses, bottom_left_y) - 28usize];
};
pub type lh_border_radiuses_t = lh_border_radiuses;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_border {
    pub width: f32,
    pub style: ::std::os::raw::c_int,
    pub color: lh_web_color_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_border"][::std::mem::size_of::<lh_border>() - 16usize];
    ["Alignment of lh_border"][::std::mem::align_of::<lh_border>() - 4usize];
    ["Offset of field: lh_border::width"][::std::mem::offset_of!(lh_border, width) - 0usize];
    ["Offset of field: lh_border::style"][::std::mem::offset_of!(lh_border, style) - 4usize];
    ["Offset of field: lh_border::color"][::std::mem::offset_of!(lh_border, color) - 8usize];
};
pub type lh_border_t = lh_border;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_borders {
    pub left: lh_border_t,
    pub top: lh_border_t,
    pub right: lh_border_t,
    pub bottom: lh_border_t,
    pub radius: lh_border_radiuses_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_borders"][::std::mem::size_of::<lh_borders>() - 96usize];
    ["Alignment of lh_borders"][::std::mem::align_of::<lh_borders>() - 4usize];
    ["Offset of field: lh_borders::left"][::std::mem::offset_of!(lh_borders, left) - 0usize];
    ["Offset of field: lh_borders::top"][::std::mem::offset_of!(lh_borders, top) - 16usize];
    ["Offset of field: lh_borders::right"][::std::mem::offset_of!(lh_borders, right) - 32usize];
    ["Offset of field: lh_borders::bottom"][::std::mem::offset_of!(lh_borders, bottom) - 48usize];
    ["Offset of field: lh_borders::radius"][::std::mem::offset_of!(lh_borders, radius) - 64usize];
};
pub type lh_borders_t = lh_borders;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_media_features {
    pub type_: ::std::os::raw::c_int,
    pub width: f32,
    pub height: f32,
    pub device_width: f32,
    pub device_height: f32,
    pub color: ::std::os::raw::c_int,
    pub color_index: ::std::os::raw::c_int,
    pub monochrome: ::std::os::raw::c_int,
    pub resolution: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_media_features"][::std::mem::size_of::<lh_media_features>() - 36usize];
    ["Alignment of lh_media_features"][::std::mem::align_of::<lh_media_features>() - 4usize];
    ["Offset of field: lh_media_features::type_"]
        [::std::mem::offset_of!(lh_media_features, type_) - 0usize];
    ["Offset of field: lh_media_features::width"]
        [::std::mem::offset_of!(lh_media_features, width) - 4usize];
    ["Offset of field: lh_media_features::height"]
        [::std::mem::offset_of!(lh_media_features, height) - 8usize];
    ["Offset of field: lh_media_features::device_width"]
        [::std::mem::offset_of!(lh_media_features, device_width) - 12usize];
    ["Offset of field: lh_media_features::device_height"]
        [::std::mem::offset_of!(lh_media_features, device_height) - 16usize];
    ["Offset of field: lh_media_features::color"]
        [::std::mem::offset_of!(lh_media_features, color) - 20usize];
    ["Offset of field: lh_media_features::color_index"]
        [::std::mem::offset_of!(lh_media_features, color_index) - 24usize];
    ["Offset of field: lh_media_features::monochrome"]
        [::std::mem::offset_of!(lh_media_features, monochrome) - 28usize];
    ["Offset of field: lh_media_features::resolution"]
        [::std::mem::offset_of!(lh_media_features, resolution) - 32usize];
};
pub type lh_media_features_t = lh_media_features;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct lh_point {
    pub x: f32,
    pub y: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lh_point"][::std::mem::size_of::<lh_point>() - 8usize];
    ["Alignment of lh_point"][::std::mem::align_of::<lh_point>() - 4usize];
    ["Offset of field: lh_point::x"][::std::mem::offset_of!(lh_point, x) - 0usize];
    ["Offset of field: lh_point::y"][::std::mem::offset_of!(lh_point, y) - 4usize];
};
pub type lh_point_t = lh_point;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_document {
    _unused: [u8; 0],
}
pub type lh_document_t = lh_document;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_background_layer {
    _unused: [u8; 0],
}
pub type lh_background_layer_t = lh_background_layer;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_linear_gradient {
    _unused: [u8; 0],
}
pub type lh_linear_gradient_t = lh_linear_gradient;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_radial_gradient {
    _unused: [u8; 0],
}
pub type lh_radial_gradient_t = lh_radial_gradient;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_conic_gradient {
    _unused: [u8; 0],
}
pub type lh_conic_gradient_t = lh_conic_gradient;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_font_description {
    _unused: [u8; 0],
}
pub type lh_font_description_t = lh_font_description;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lh_list_marker {
    _unused: [u8; 0],
}
pub type lh_list_marker_t = lh_list_marker;
unsafe extern "C" {
    pub fn lh_font_description_family(
        fd: *const lh_font_description_t,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn lh_font_description_size(fd: *const lh_font_description_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_font_description_style(fd: *const lh_font_description_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_font_description_weight(fd: *const lh_font_description_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_font_description_decoration_line(
        fd: *const lh_font_description_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_font_description_decoration_thickness_is_predefined(
        fd: *const lh_font_description_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_font_description_decoration_thickness_predef(
        fd: *const lh_font_description_t,
    ) -> ::std::os::raw::c_int;
}
